fix: agent icon should align to the color theme (#2049)

--- a/packages/uhk-web/src/app/components/uhk-message/uhk-message.component.scss
+++ b/packages/uhk-web/src/app/components/uhk-message/uhk-message.component.scss
@@ -6,9 +6,9 @@
 }
 
 .agent-logo {
-    padding: 2em;
-    height: 12em;
-    width: 12em;
+    margin: 1.25em;
+    height: 8em;
+    width: 8em;
 }
 
 .message {
